# pykusto-language

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
examples/: binding_comparison.py  linter.py  llm_view.py  query_analysis.py  query_auditor.py  walk_ir.py  walk_tree.py
scripts/: audit_syntax_kinds.py  extract_complex_corpus.py  extract_sentinel_schemas.py  get_dlls.sh  mine_corpus.py  refresh_dll.py  sample_sentinel_corpus.py  verify_corpus.py  verify_dll.py
src/kustology/: __init__.py  bridge.py  cli.py  core.py  reflection.py  services.py
src/kustology/ir/: __init__.py  _builder_helpers.py  _guard.py  binder.py  builder.py  expr.py  llm_view.py  query.py
src/kustology/utils/: analysis.py  schema_state.py
src/pykusto_language/: __init__.py  bridge.py  cli.py  core.py  parser.py  services.py  visitor.py
src/pykusto_language/ir/: __init__.py  _builder_helpers.py  _guard.py  _normalize.py  builder.py  llm_view.py  query.py  spans.py  types.py
src/pykusto_language/utils/: __init__.py  analysis.py  walker.py
tests/: conftest.py  test_advanced_utils.py  test_basic_parse.py  test_cli.py  test_coverage_audit.py  test_reflection.py  test_replace_table.py  test_table_extraction.py  test_to_ir_seam.py
tests/fixtures/: syntax_kinds_baseline.json
tests/fixtures/complex_queries/: ADFSRemoteHTTPNetworkConnection.kql  AFD_Premium_WAF_XSSDetection.kql  AVTarrask.kql  AnomalyFoundInNetworkSessionTraffic.kql  Azure_Firewall_Port_Scan.kql  Brute_Force_Attack_against_GitHub_Account.kql  CertifiedPreOwned_TGTs_requested.kql  Cross_tenantAccessSettingsOrganizationOutboundCollaborationSettingsChanged.kql  DataTable_InlineSource.kql  Dataverse_Terminated_employee_exfiltration_over_email.kql  Detection_ErrorsSyntaxStatefulAnomalyOnDatabase.kql  Distinct_WithRename.kql  Dynamic_Literal.kql  EmailEntity_AzureActivity.kql  ExpiredAccessCredentials.kql  FileHashEntity_SecurityEvent.kql  GCPOpenFirewallRuleCreated.kql  IPEntity_AzureFirewall.kql  IPEntity_SigninLogs_Updated.kql  Implicit_JoinRhsUnion.kql  Implicit_MvApplySubquery.kql  Implicit_UnionRoot.kql  Lumen_IPEntity_DeviceEvents.kql  MailPermissionsAddedToApplication.kql  NRT_AuthenticationMethodsChangedforVIPUsers.kql  NRT_execute_base64_decodedpayload.kql  Partition_HintStrategy.kql  PrivlegedRoleAssignedOutsidePIM.kql  Sort_BareColumn.kql  SuspiciousOAuthApp_OfflineAccess.kql  Threat_Essentials_MultipleAdmin_membership_removals_from_NewAdmin.kql  URLEntity_SecurityAlerts.kql  ZincOctober2022_AVHits_IOC.kql
tests/ir/: conftest.py  test_ast_isolation.py  test_binder.py  test_complex_harness.py  test_ir_builder.py  test_ir_roundtrip.py  test_llm_view.py
